// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/common/Link should render properly 1`] = `
.c0 {
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
  color: inherit;
  text-decoration: underline;
}

.c0:hover {
  text-decoration: none;
}

.c0:focus {
  outline: 1px dashed #002d56;
  outline-color: inherit;
}

<div>
  <a
    class="c0"
    data-discover="true"
    href="/"
  >
    CONTENT
  </a>
</div>
`;

exports[`components/common/Link should render props 1`] = `
.c0 {
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
  color: inherit;
  text-decoration: underline;
}

.c0:hover {
  text-decoration: none;
}

.c0:focus {
  outline: 1px dashed #002d56;
  outline-color: inherit;
}

<div>
  <a
    class="c0"
    href="/"
    target="_blank"
    title="TITLE"
  >
    CONTENT
  </a>
</div>
`;
